# minecraft-whisper-svenska

./: .gitignore  README.md  pyproject.toml
src/whisper_stt/: __main__.py  app.py  app.tcss  claude_sdk.py  config.py  history.py  main.py  pipeline.py
