[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-stt"
version = "0.1.0"
description = "Real-time Swedish speech-to-text TUI"
requires-python = ">=3.13,<3.14"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "faster-whisper>=1.0",
    "realtimestt>=0.3.0",
    "requests>=2.32.5",
    "textual>=1.0",
]

[project.scripts]
whisper-stt = "whisper_stt.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_stt"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "pyright>=1.1",
]
